# online_mart_api

./: README.md  compose.yml
inventory_service/app/: inventory.proto  inventory_pb2.py  settings.py
inventory_service/app/consumer/: main.py
inventory_service/app/producer/: main.py
notification_service/: Dockerfile.dev  pyproject.toml
notification_service/app/: handle_email.py  kafka.py  notification.proto  notification_pb2.py  settings.py
notification_service/app/consumer/: order.py  payment.py  user.py
notification_service/app/producer/: main.py
order_service/: Dockerfile.dev  pyproject.toml
order_service/app/: auth.py  db.py  kafka.py  model.py  order.proto  order_pb2.py  product_pb2.py  settings.py
order_service/app/consumer/: main.py
order_service/app/producer/: main.py
order_service/app/router/: user.py
payment_service/: .gitignore  Dockerfile.dev  pyproject.toml
payment_service/app/: auth.py  kafka.py  model.py  payment.proto  payment_pb2.py  settings.py
payment_service/app/consumer/: main.py
payment_service/app/producer/: main.py
payment_service/app/router/: user.py
payment_service/app/stripe/: payment.py
product_service/: Dockerfile.dev
product_service/app/: product.proto  product_pb2.py  settings.py
product_service/app/consumer/: main.py
product_service/app/producer/: main.py
user_service/: Dockerfile.dev
user_service/app/: auth.py  db.py  kafka.py  model.py  settings.py  user.proto  user_pb2.py
user_service/app/consumer/: main.py
user_service/app/producer/: main.py
